services/verifier/build_log_t2.txt
    Checking verifier v0.1.0 (C:\Users\Vinyas G M\OneDrive\Desktop\Axiom\services\verifier)
warning: unused imports: `StmtAsyncFunctionDef`, `StmtClassDef`, and `StmtFunctionDef`
 --> src\main.rs:6:36
  |
6 | use rustpython_parser::ast::{Stmt, StmtFunctionDef, StmtClassDef, StmtAsyncFunctionDef};
  |                                    ^^^^^^^^^^^^^^^  ^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

error[E0308]: mismatched types
  --> src\main.rs:95:35
   |
95 |                     checker.check(&ast);
   |                             ----- ^^^^ expected `&Vec<Stmt>`, found `&Mod`
   |                             |
   |                             arguments to this method are incorrect
   |
   = note: expected reference `&Vec<rustpython_parser::rustpython_ast::Stmt>`
              found reference `&rustpython_parser::rustpython_ast::Mod`
note: method defined here
  --> src\main.rs:19:8
   |
19 |     fn check(&mut self, ast: &Vec<Stmt>) {
   |        ^^^^^            ---------------

For more information about this error, try `rustc --explain E0308`.
warning: `verifier` (bin "verifier") generated 1 warning
error: could not compile `verifier` (bin "verifier") due to 1 previous error; 1 warning emitted
